[gd_scene load_steps=5 format=3 uid="uid://dmq4aarkkp044"]

[ext_resource type="StyleBox" uid="uid://dv72od2tskfeh" path="res://Theme/DarkBluePanel.tres" id="1_kj8d5"]
[ext_resource type="Texture2D" uid="uid://bhg24g7ywfqe8" path="res://Assets/Spaceship/Spaceship_top_2_Main Camera.png" id="2_5pxfv"]
[ext_resource type="Script" path="res://Scripts/card_fight_ship_viz.gd" id="2_qce1f"]
[ext_resource type="FontFile" uid="uid://cg1v3rwo18jwh" path="res://Fonts/Play-Bold.ttf" id="3_4gmqt"]

[node name="CardFightShipViz" type="PanelContainer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = ExtResource("1_kj8d5")
script = ExtResource("2_qce1f")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="HBoxContainer"]
layout_mode = 2
texture = ExtResource("2_5pxfv")
stretch_mode = 3

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_4gmqt")
text = "HL : 100"

[node name="Label2" type="Label" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_4gmqt")
text = "SPD : 100"

[node name="Label4" type="Label" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_4gmqt")
text = "FP : 100"
